# wisp

./: .gitignore  Dockerfile  LICENCE  MANIFEST.in  README.md  build.py  build_softprob.py  constants.py  docker-compose.debug.yml  docker-compose.yml  env.sh  force_build.py  genouest_wisp.sh  graphs.py  justfile  main.py  main_softprob.py  mass_report.csv  mydb.json  pipeline.sh  pipeline_143_genomes.sh  pipeline_allvsall.sh  pipeline_onevsall.sh  plotters.py  predictors.py  processing.sh  pyproject.toml  requirements.txt  sample_class.py  setup.py  utilities.py  wget-log  wget-log.1  wisp.py  wisp.sh  wisp_build.py  wisp_model.py  wisp_params.json  wisp_params_143genomes.json  wisp_params_bdd5.json  (+11 more)
data_exploration/: plotting.py
devwks/: build_softprob.py
genomes/: sequence_2.fna
get_dataset/: submit_get_taxo.sh
old/: build_pandas_sklearn.py  datasets.py  generate_sequences.py  genome_analysis.py  load_sequences.py  main_deadcode.py  qgrams.py
parameters_files/: MinION.json  MinION_2.json  MinION_3.json  megadb.json  wisp_params_destroyed2_lou.json  wisp_params_destroyed_lou.json  wisp_params_small.json  wisp_params_subsampled.json  wisp_params_subsampled_v2.json
preview/: Rapport.md
python_tools/: __init__.py  my_checker.py  my_coros.py  my_fasta.py  my_logs.py  my_maths.py
scripts/: NCBI_credentials.yaml  README.md  download_refseq.py  download_refseq_optim.py  get_taxo_by_batch.py  get_taxo_for_refseq.py  scan_for_taxo_stat.py  submit_get_taxo.sh  visualize_output.py
wisp_lib/: __init__.py  data_manipulation.py  kmers_coders.py  parameters_init.py  (+2 more)
(+560 files in other folders)
