[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wisp"
version = "0.1.1"
authors = [
  { name="Tharos", email="dubois.siegfried@gmail.com" },
]
description = "XGBoost bacterai family identification."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Tharos-ux/wisp"
"Bug Tracker" = "https://github.com/Tharos-ux/wisp/issues"